--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>BinanceConverter</title>
+    <style>
+      body {
+        background-color: rgba(255, 255, 0, 0.138);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
